@startuml Search Tour
skinparam classAttributeIconSize 0

package "API" {
    class PublicController {
        +SearchTours(query: SearchToursQuery): Task<IActionResult>
    }
}

package "Application" {
    class SearchToursQuery {
        +Q: string?
        +Page: int
        +PageSize: int
    }

    class SearchToursQueryHandler {
        -tourRepository: ITourRepository
        +Handle(request: SearchToursQuery): Task<ErrorOr<PaginatedList<SearchTourVm>>>
    }

    class SearchTourVm {
        +Id: Guid
        +Name: string
        +ImageUrl: string?
    }
}

package "Domain" {
    interface ITourRepository {
        +SearchTours(...): Task<List<TourEntity>>
    }

    class TourEntity {
        +Id: Guid
        +TourName: string
    }
}

PublicController ..> SearchToursQuery : uses
SearchToursQuery ..> SearchToursQueryHandler : handled by
SearchToursQueryHandler --> ITourRepository : calls
ITourRepository ..> TourEntity : retrieves
@enduml
